Actualizar ambiente con trame para pyvista

--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,6 @@ dependencies:
   - mayavi
   - ipyvolume
   - ipympl
-  - ipywidgets
-  - ipyevents
-  - menpo::osmesa
+  - trame
+  - pip:
+    - pyvista[jupyter]
